Eliminate accidental loop amplification over unreachable tasks.

Per MESOS-9889, the foreachkey operator on a multimap will actually
loop over each <key,value> entry, thus looping over the same key
multiple times. The code in the master is written such that
excessive looping occurs.

For example: <F1,T1> <F1,T2> <F1,T3>
This will consider T1,T2,T3 3 times each rather than once each!

We could fix this using .keys(), but this patch just replaces the
multimap with a map of vectors.

Review: https://reviews.apache.org/r/71579